# daqmin

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/daqmin/: __init__.py  __main__.py  add_channel_dialog.py  attributes.py  channel_variants.py  data_model.py  detail_widgets.py  genattrs.py  ui_model.py
tests/: test_ui_model.py
